feat: complete application read model migration
